# ogd-api-files

./: .gitignore  .markdownlint.json  .pylintrc  CITATION.cff  README.md  TestDriver.py  app.py  app.wsgi  pyproject.toml  requirements.txt  rsync-exclude
.github/workflows/: BUILD_FileAPI.yml  CI_FileAPI.yml  CI_api_files.yml  CI_test_webAPI.yml  CI_webAPI.yml  CLEAN_FileAPI.yml  DEPLOY_FileAPI.yml  FileAPI_CI.yml  FileAPI_cleanup.yml  FileAPI_release.yml  FileAPI_test_FileAPI.yml  RELEASE_FileAPI.yml  TEST_FileAPI.yml  TEST_FileAPI_local.yml  TEST_FileAPI_remote.yml  TEST_HelloAPI.yml  TEST_HelloAPI_remote.yml  TEST_LegacyWebAPI.yml  TEST_LegacyWebAPI_remote.yml  WebAPI_CI.yml  WebAPI_Deploy.yml  WebAPI_Release.yml  api_files_CI.yml  api_files_cleanup.yml  api_files_release.yml  api_files_test_HelloAPI.yml  cleanup_api_files.yml  release_api_files.yml  release_webAPI.yml  test_api_files_FileAPI.yml  test_api_files_HelloAPI.yml  test_webAPI.yml  test_webAPI_Hello.yml  webAPI_CI.yml  webAPI_release.yml
config/: config.py.template
interfaces/: BigQueryInterface.py  MySQLInterface.py
models/: SanitizedParams.py
package/: pyproject.toml  requirements.txt
schemas/: DatasetSchema.py  FileListSchema.py
src/: app.py  app.wsgi
src/apis/: FileAPI.py  LegacyWebAPI.py
src/configs/: FileAPIConfig.py
src/interfaces/: BigQueryInterface.py  DataInterface.py
src/models/: APIResponse.py  SanitizedParams.py
src/schemas/: FileAPIConfig.py
src/utils/: SanitizedParams.py  utils.py
tests/: FileAPITestConfig.py  t_HelloAPI.py  t_config.py.template
(+73 files in other folders)
